# otuscpp-hw10

./: CMakeLists.txt  Doxyfile  README.md  bintray.json.in  bulk.cpp  bulk.h  log.h  main.cpp  metr.h  tp.cpp  tp.h
tests/: test_func.cpp  test_logic.cpp
